--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,30 @@
-/* You can add global styles to this file, and also import other style files */
+
+*, *:before, *:after {
+    box-sizing: border-box;
+    margin: 0;    
+}
+
+h1 {
+    font-size: 5rem;
+}
+
+h2 {
+    font-size: 4rem;    
+}
+
+h3 {
+    font-size: 3rem;
+}
+
+html, body { 
+    height: 100%; 
+    font-size: 62.5%;
+    font-family: 'Mulish', sans-serif;
+}
+
+img {
+    max-width: 100%;
+    display: block;
+}
+
+
