--- a/src/app/ui/components/material-input/material-input.component.html
+++ b/src/app/ui/components/material-input/material-input.component.html
@@ -1,5 +1,6 @@
 <div class="group">
-    <input [type] = "type" required>
+    <input [type]            = "type" required
+           [formControlName] = "name">
     <span class="bar"></span>
     <label><span class="icon"><i [class] = "icon"></i></span>{{ label }}</label>
 </div>
