--- a/src/app/ui/components/toggle-switch/toggle-switch.component.html
+++ b/src/app/ui/components/toggle-switch/toggle-switch.component.html
@@ -3,7 +3,8 @@
         {{ label }}
     </div>    
     <label class="switch">    
-        <input type="checkbox">
+        <input type              = "checkbox"
+               [formControlName] = "name">
         <span class="slider"></span>
     </label>
 </div>
