--- a/src/app/ui/components/material-input/material-input.component.scss
+++ b/src/app/ui/components/material-input/material-input.component.scss
@@ -1,6 +1,4 @@
-$bg-color: #424242;
-$hl-color: #2196F3;
-$muted-color: mix(white, $bg-color, 70%);
+$muted-color: mix(white, #424242, 70%);
 $trans-time: 300ms;
 $width: 100%;
 
@@ -9,8 +7,7 @@ $width: 100%;
   margin-bottom: 2rem;   
 }
 
-input {
-  background: none;
+input {  
   letter-spacing: 0.1rem;
   color:  rgba(black, 0.7);
   font-size: 1.8rem;
@@ -18,8 +15,7 @@ input {
   padding: 2rem 1rem 1.5rem 0.5rem;
   display: block;
   width: $width;
-  border: none;
-  border-radius: 0;
+  border: none;  
   border-bottom: 1px solid $muted-color;
   &:focus {
     outline: none;
@@ -28,7 +24,7 @@ input {
   &:valid ~ label {
     top: -1rem;
     font-size: 1.3rem;
-    color: $hl-color;
+    color: var(--primary-color);
     .icon {
       font-size: 1.5rem;
       margin-right: 0.5rem;
@@ -65,7 +61,7 @@ label {
     width: 0;
     bottom: 0px;
     position: absolute;
-    background: $hl-color;
+    background: var(--primary-color);
     transition: $trans-time ease all;
     left: 0%;
   }
