--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@import './app/shared/css/_global_variables';
 
 *, *:before, *:after {
     box-sizing: border-box;
@@ -27,4 +28,42 @@ img {
     display: block;
 }
 
+.hidden {
+    display: none;
+}
 
+.form-text {
+    font-size: 1.4rem;
+    font-weight: 600;
+    padding-bottom: 1.5rem;
+}
+
+
+.animated {
+    -webkit-animation-duration: 0.3s;
+    animation-duration: 0.3s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;  
+  }
+  
+  @-webkit-keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+    
+      to {
+        opacity: 1;
+      }
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+  
+    to {
+      opacity: 1;
+    }
+  }
